# spotWelderControlBoard

./: .gitignore  .gitmodules  CMakeLists.txt  OLED_I2C_3D_Cube.ino  README.md  demo.cpp  mcuSelect.cmake  pinMapping.h  platformConfig.cmake  rotary.cpp  rotary.h  vbat.gnumeric
WS2812/: CMakeLists.txt  WS2812B.cpp  WS2812B.h
assets/: assets.cpp  assets.h  c1.kra  c2.kra  c3.kra  c4.kra  convert.py  convert.sh  splash.kra
assets/fonts/Fonts/: FontsFree_Net_Nurom_Bold10pt7b.h  FontsFree_Net_Nurom_Bold26pt7b.h  FontsFree_Net_Nurom_Bold9pt7b.h  FreeSans9pt7b.h  FreeSansBold20pt7b.h  FreeSansBold24pt7b.h  FreeSansBold36pt7b.h
casing/: case.fcstd
ldScript/GD32F1/: .gd32f1.ld.swp
ldScript/GD32F3/: .gd32f1.ld.swp
oled/: CMakeLists.txt  OLED_I2C.cpp  README.md  ssd1306_base.cpp  ssd1306_base.h  ssd1306_cmd.h  ssd1306_ex.cpp  ssd1306_i2c.cpp  ssd1306_i2c.h  ssd1306_i2c_f1.cpp  ssd1306_i2c_f1.h
oled/hardware/arm/: HW_STM32.h  HW_STM32_defines.h
schematic/spotWelder/: spotWelder-cache.lib  spotWelder.pro  spotWelder.sch  spotWelder.sch-bak
src/: Leds.cpp  Leds.h  SSD1306.cpp  SSD1306_font.cpp  bench.cpp  buzzer.cpp  buzzer.h  demo.cpp  dso_debug.h  dso_eeprom.cpp  dso_eeprom.h  dso_eeprom_nvm.cpp  dso_eeprom_stub.cpp  dso_logger.cpp  go.cpp  go.h  goAuto.cpp  goAuto.h  goPedal.cpp  goPedal.h  mainMenu.cpp  measurement.cpp  measurement.h  navigate.h  pedal.cpp  pedal.h  pulse.cpp  pulse.h  pulseWidth.cpp  pulseWidth.h  rotary.cpp  rotary.h  screen.h  trigger.cpp  trigger.h  voltageCalibration.cpp  voltageCalibration.h  welderTypes.h  welderUi.h  welderVersion.h
